--- a/MyWebAPI/MyWebAPI/MyWebAPI.csproj
+++ b/MyWebAPI/MyWebAPI/MyWebAPI.csproj
@@ -8,4 +8,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+    <Folder Include="Services\" />
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
