http status code

--- a/MyWebAPI/MyWebAPI/appsettings.json
+++ b/MyWebAPI/MyWebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "SecretKey": "DemoWebAPI"
+  },
   "ConnectionStrings": {
     "MyDB": "Data Source=.;Initial Catalog=DemoWebAPI;User Id=sa;Password=Ab@123456;Integrated Security=True"
   },
