--- a/MyWebAPI/MyWebAPI/appsettings.json
+++ b/MyWebAPI/MyWebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "SecretKey": "DemoWebAPI"
+    "SecretKey": "moxzdhkhwjucxejyybnyyillhtpjnckm"
   },
   "ConnectionStrings": {
     "MyDB": "Data Source=.;Initial Catalog=DemoWebAPI;User Id=sa;Password=Ab@123456;Integrated Security=True"
